# MTI-EVO

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  IDRE_KEY_7245.txt  MANIFEST.in  README.md  README_API.md  audit_results.txt  bio_dream_log.txt  capture.txt  chaos_dream_log.txt  cluster_ABC_merged_manifest.json  cross_model_injection_results.json  debug_import.py  debug_paths.py  diagnose_dll.py  dream_explorer_log.txt  dream_explorer_log_2.txt  dream_journal_russell_10_gguf.json  field_0.npz  field_5555.npz  field_7245.npz  field_8888.npz  fingerprint_7245.npy  injection_results.json  launch_cortex.py  mti_chronos.py  mti_config.json  music_dream_log_clean.txt  mypy.ini  proof_log.txt  pyproject.toml  pytest.ini  quantum_dream_log.txt  rem_output.txt  requirements.txt  run_evo.py  scan_report.json  secure_config_template.py  (+3 more)
.dream_shadow/: dream_journal.json  dream_stats.json  dream_todo_coherence.py_65.py  dream_todo_dream.py_259.py  dream_todo_dream.py_268.py  dream_todo_dream_engine.py_183.py  dream_todo_dream_engine.py_186.py  dream_todo_dream_engine.py_197.py  dream_todo_dream_engine.py_201.py  dream_todo_dream_engine.py_202.py  dream_todo_dream_engine.py_50.py  dream_todo_dream_engine.py_86.py  interactive_state.json  journal.json  ouroboros_c1.py  ouroboros_c2.py  ouroboros_c3.py  ouroboros_evolution.json  ouroboros_gen_1.py  ouroboros_gen_10.py  ouroboros_gen_12.py  ouroboros_gen_14.py  ouroboros_gen_16.py  ouroboros_gen_18.py  ouroboros_gen_20.py  ouroboros_gen_22.py  ouroboros_gen_24.py  ouroboros_gen_26.py  ouroboros_gen_28.py  ouroboros_gen_3.py  (+25 more)
(+505 files in other folders)
