[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mti-evo"
version = "2.3.5"
description = "MTI-EVO: Holographic Lattice Cognitive Mesh"
requires-python = ">=3.10"
dependencies = [
    "rich",
    "cryptography",
    # "fastecdsa", # Requires C compiler, using pure python or cryptography instead
    "pynvml",
    "llama-cpp-python"
]

[project.scripts]
mti-evo = "mti_evo.cli:main"
mti-server = "mti_evo.server.substrate:run_substrate_server"
mti-dev = "mti_evo.server.dev_server:run_dev_server"
mti-substrate = "mti_evo.server.substrate:run_substrate_server" # Legacy alias
mti-setup = "mti_evo.setup:main"

[tool.setuptools.packages.find]
where = ["src", "."]
